# OrbitEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: Editor.yml
CMake/: Config.cmake  Tools.cmake
CMake/Android/: APK.cmake  LoadLibraries.java.in
CMake/Emscripten/: template.html
CMake/Modules/: FindDL.cmake  FindDirectX.cmake  FindGLES.cmake  FindMono.cmake
Code/include/OE/: Config.hpp.in
Code/include/OE/Application/: Application.hpp  Context.hpp  ContextImpl.hpp  Event.hpp  EventHandler.hpp  InputEvents.hpp  InputManager.hpp  Loopeable.hpp  Looper.hpp  NativeHandlers.hpp  View.hpp  Window.hpp  WindowImpl.hpp
Code/include/OE/Engine/: Asset.hpp  Camera.hpp  Component.hpp  EngineDomain.hpp  EulerCameraController.hpp  MemoryDomain.hpp  MemoryDomain.inl  MeshRenderer.hpp  Object.hpp  Resource.hpp  Resources.hpp  Scene.hpp  SceneObject.hpp  SceneRenderer.hpp  SceneRunner.hpp  TestComponent.hpp  Texture.hpp  Transform.hpp
Code/include/OE/Graphics/: Atlas.hpp  Bitmap.hpp  BitmapAtlas.hpp  CommandBuffer.hpp  DynamicAtlas.hpp  DynamicAtlasAllocator.hpp  Font.hpp  FontCollection.hpp  FontInstance.hpp  FreeImage.hpp  LookUpTexture.hpp  MSDF.hpp  ManagedShader.hpp  MeshGenerator.hpp  Renderer.hpp  ShaderCompiler.hpp  ShaderLoader.hpp  ShaderManager.hpp  TextureAtlas.hpp  TextureBlitter.hpp
Code/include/OE/Math/: AABB.hpp  Color.hpp  Color.inl  ColorGradient.hpp  Gradient.hpp  Mat4.hpp  Mat4.inl  Math.hpp  Rect.hpp  Rect.inl  Scissor.hpp  UV.hpp  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl  Vec4.hpp  Vec4.inl
Code/include/OE/Memory/: Allocator.hpp  MemoryPool.hpp  MemoryPool.inl  Ptrs.hpp  Ptrs.inl
Code/include/OE/Meta/: Member.hpp  MonoMember.hpp  MonoReflection.hpp  MonoType.hpp  NativeMember.hpp  NativeReflection.hpp  NativeType.hpp  ReflectionDatabase.hpp  Type.hpp  Variant.hpp
Code/include/OE/Misc/: Allocator.hpp  BaseStack.hpp  Camera.hpp  EulerCamera.hpp  FrameDebugger.hpp  GUID.hpp  JSON.hpp  Log.hpp  MatrixStack.hpp  MemoryPool.hpp  OEObject.hpp  ObjectPool.hpp  Pimpl.hpp  Property.hpp  Ptrs.hpp  Ptrs.inl  RectsPacker.hpp  ScissorStack.hpp  SharedObject.hpp  SharedReference.hpp  Singleton.hpp  Ticker.hpp
Code/include/OE/System/: File.hpp  IOStream.hpp  System.hpp
Code/include/OE/UI/: Composer.hpp  Element.hpp  HierarchyElement.hpp  Label.hpp  LayoutElement.hpp  Painter.hpp  Style.hpp  StyleProvider.hpp  Surface.hpp  Text.hpp  TreeProcessor.hpp  TreeUpdater.hpp
Code/include/OE/UI_OLD/: Event.hpp
Code/src/OE/Application/: Context.cpp  ContextImpl.cpp  InputManager.cpp  Looper.cpp  View.cpp  Window.cpp  WindowImpl.cpp
Code/src/OE/Engine/: Asset.cpp  Camera.cpp  Component.cpp  EngineDomain.cpp  EulerCameraController.cpp  MemoryDomain.cpp  MeshRenderer.cpp  Object.cpp  Resource.cpp  Resources.cpp  Scene.cpp  SceneObject.cpp  SceneRenderer.cpp  SceneRunner.cpp  TestComponent.cpp  Texture.cpp  Transform.cpp
Code/src/OE/Graphics/: Atlas.cpp  Bitmap.cpp  CommandBuffer.cpp  DynamicAtlas.cpp  DynamicAtlasAllocator.cpp  Font.cpp  FontCollection.cpp  FreeImage.cpp  LookUpTexture.cpp  MSDF.cpp  ManagedShader.cpp  MeshGenerator.cpp  Renderer.cpp  ShaderCompiler.cpp  ShaderLoader.cpp  ShaderManager.cpp  ShaderPass.cpp  TextureAtlas.cpp  TextureBlitter.cpp
Code/src/OE/Math/: Color.cpp  ColorGradient.cpp
Code/src/OE/Memory/: MemoryPool.cpp
Code/src/OE/Meta/: Member.cpp  MonoMember.cpp  MonoReflection.cpp  MonoType.cpp  NativeMember.cpp  NativeReflection.cpp  NativeType.cpp  ReflectionDatabase.cpp  Type.cpp  Variant.cpp
Code/src/OE/Misc/: EulerCamera.cpp  FrameDebugger.cpp  GUID.cpp  JSON.cpp  Log.cpp  MemoryPool.cpp  OEObject.cpp  Property.cpp  Ptrs.cpp  RectsPacker.cpp  Ticker.cpp  ToReflect.hpp
Docs/: Doxyfile  gen.sh  requirements.txt
Editor/: .gitignore  CMakeLists.txt  package.json  webpack.config.js
Editor/Code/include/: Cef.hpp  CefBrowserClient.hpp  CefBrowserRenderHandler.hpp  CefController.hpp  CefElementBuffer.hpp  CefView.hpp  EditorWindow.hpp  EngineEditor.hpp
Editor/Code/src/: CefBrowserClient.cpp  CefBrowserRenderHandler.cpp  CefController.cpp  CefElementBuffer.cpp  CefView.cpp  EditorWindow.cpp  EngineEditor.cpp  main.cpp  main_cpp.old
Editor/UI/: package.json  webpack.config.js
Editor/UI/assets/styles/: Editor.less  Highlight.less  Icons.less  List.less  RenderOutput.less  WorkspaceSelector.less  dock.less
Editor/UI/public/: splash.html
Editor/UI/src/: ApplicationContext.ts  Editor.jsx  index.jsx
Editor/UI/src/components/: List.jsx  RenderOutput.jsx  StatusBar.jsx
Editor/UI/src/components/ui/: Button.jsx  ContextMenu.jsx  Icon.jsx
Editor/UI/src/service/: EngineService.ts
Editor/assets/: index.html
Editor/assets/styles/: Button.less  ContextMenu.less  Editor.less  HeaderSearchBar.less  HierarchyTree.less  List.less  dock.less  vars.less
Editor/native/: CMakeLists.txt
Editor/native/src/: main.cpp
Editor/public/: splash.html
Editor/src/: ApplicationContext.js  Editor.jsx  index.jsx
Editor/src/components/: HeaderSearchBar.jsx  HierarchyTree.jsx  List.jsx  Menu.jsx  RenderOutput.jsx  WorkspaceSelector.jsx
Editor/src/components/ui/: Button.jsx  ContextMenu.jsx  Highlight.jsx  Icon.jsx
Editor/src/electron/: main.js
Editor/src/service/: EngineService.js
Resources/Shaders/: 3DRender.oeshader  Batch2D.oeshader  Batch2D_D3D11.frag  Batch2D_D3D11.vert  Batch2D_GL.frag  Batch2D_GL.vert  Batch2D_GLES.frag  Batch2D_GLES.vert  Common.oeshader  DeferredLighting.oeshader  DeferredPBR.oeshader  DeferredPBR_D3D11.frag  DeferredPBR_D3D11.vert  DeferredPBR_GL.frag  DeferredPBR_GL.vert  DeferredPBR_GLES.frag  DeferredPBR_GLES.vert  GBuffer.oeshader  GBuffer_GL.frag  GBuffer_GL.vert  GBuffer_GLES.frag  GBuffer_GLES.vert  Gbuffer_D3D11.frag  Gbuffer_D3D11.vert  Grid2D.vert  Grids.oeshader  HdrToCubemap_GL.frag  HdrToCubemap_GL.geom  HdrToCubemap_GL.vert  ImGui.oeshader  IntegrateBRDF.oeshader  IntegrateBRDF_GL.frag  IntegrateBRDF_GL.vert  IntegrateBRDF_GLES.frag  IntegrateBRDF_GLES.vert  Lighting.oeshader  PBR.oeshader  SDF.oeshader  Skybox.oeshader  Skybox_GL.frag  (+13 more)
(+310 files in other folders)
